# math_problems_debate

./: .env.example  .gitignore  CLAUDE.md  README.md  argument_cache.json  cache.json  cache.py  clean.sh  data.py  elo_calculation.py  experiments.py  foo.txt  function_calling.py  hello_gemini.py  llm_utils.py  model_wrappers.py  mun.py  naive_judge_cache.json  playground.ipynb  prompts.py  pyproject.toml  requirements.txt  results.json  run.sh  tee.txt  temp.json  test.ipynb
.costly/: costlog_2024-10-05_20-31-09.jsonl  costlog_2024-10-05_20-42-38.jsonl  costlog_2024-10-05_21-02-51.jsonl  costlog_2024-10-05_21-05-45.jsonl
.litellm_cache/: cache.db
__MACOSX/: ._QuALITY.v1.0.1.dev  ._QuALITY.v1.0.1.test  ._QuALITY.v1.0.1.train
data/: test_data.json
experiments/: basic_math_experiments.ipynb  gsm_8k.py  init_exp.py  init_exp_analyze.py  init_exp_recompute.py  new_exp.py  test_verification.py
old/: data.py  experiments.py  model_wrappers.py
results/: claude35_sonnet-claude35_sonnet-gpt35_turbo.json  claude35_sonnet-gpt_35_turbo-gpt_35_turbo.json  claude35_sonnet-gpt_4o-gpt35_turbo.json  claude35_sonnet-gpt_4o-gpt_35_turbo.json  claude35_sonnet-llama2_13b-gpt35_turbo.json  claude3_sonnet-claude35_sonnet-gpt35_turbo.json  claude3_sonnet-claude35_sonnet-gpt_35_turbo.json  claude3_sonnet-claude3_sonnet-gpt35_turbo.json  claude3_sonnet-gpt4o-gpt35_turbo.json  claude3_sonnet-gpt_35_turbo-gpt_35_turbo.json  claude3_sonnet-gpt_4o-gpt_35_turbo.json  claude3_sonnet-llama2_7b-gpt35_turbo.json  claude3_sonnet-llama3_8b-gpt35_turbo.json  gpt-4o-gpt-4o-gpt-4o.json  gpt35_turbo-gpt35_turbo-gpt35_turbo.json  gpt35_turbo-llama2_13b-gpt35_turbo.json  gpt4o-gpt35_turbo-gpt35_turbo.json  gpt4o-gpt4o-gpt4o.json  gpt4o-llama2_13b-gpt35_turbo.json  gpt4o-llama3_8b-gpt35_turbo.json  gpt_35_turbo-gpt_4o-gpt_35_turbo.json  gpt_35_turbo-llama3_8b-gpt35_turbo.json  gpt_4o-gpt_4o-gpt_4o.json  gpt_4o-llama2_7b-gpt35_turbo.json  gpt_4o-llama3_8b-gpt35_turbo.json  llama2_13b-llama2_13b-llama2_13b.json  llama2_13b-llama2_7b-gpt35_turbo.json  llama2_7b-llama2_7b-llama3_8b.json  llama2_7b-llama3_8b-gpt35_turbo.json  llama3_8b-llama3_8b-llama3_8b.json
results_consultancy/: claude35_sonnet-gpt35_turbo.json  claude35_sonnet-gpt4o.json  claude35_sonnet-llama2_7b.json  claude35_sonnet-llama3_8b.json  claude3_sonnet-gpt35_turbo.json  claude3_sonnet-gpt4o.json  claude3_sonnet-llama2_7b.json  claude3_sonnet-llama3_8b.json  gpt35_turbo-gpt35_turbo.json  gpt35_turbo-gpt4o.json  gpt35_turbo-llama2_7b.json  gpt35_turbo-llama3_8b.json  gpt4o-gpt35_turbo.json  gpt4o-gpt4o.json  gpt4o-llama2_7b.json  gpt4o-llama3_8b.json  llama2_13b-gpt35_turbo.json  llama2_13b-gpt4o.json  llama2_13b-llama2_7b.json  llama2_13b-llama3_8b.json  llama2_7b-gpt35_turbo.json  llama2_7b-gpt4o.json  llama2_7b-llama2_7b.json  llama2_7b-llama3_8b.json  llama3_8b-gpt35_turbo.json  llama3_8b-gpt4o.json  llama3_8b-llama2_7b.json  llama3_8b-llama3_8b.json
results_debate/: claude35_sonnet-claude35_sonnet-gpt35_turbo.json  claude35_sonnet-claude3_sonnet-gpt35_turbo.json  claude35_sonnet-claude3_sonnet-gpt4o.json  claude35_sonnet-claude3_sonnet-llama2_7b.json  claude35_sonnet-claude3_sonnet-llama3_8b.json  claude35_sonnet-gpt35_turbo-gpt35_turbo.json  claude35_sonnet-gpt35_turbo-gpt4o.json  claude35_sonnet-gpt35_turbo-llama2_7b.json  claude35_sonnet-gpt35_turbo-llama3_8b.json  claude35_sonnet-gpt4o-gpt35_turbo.json  claude35_sonnet-gpt4o-gpt4o.json  claude35_sonnet-gpt4o-llama2_7b.json  claude35_sonnet-gpt4o-llama3_8b.json  claude35_sonnet-llama2_13b-gpt35_turbo.json  claude35_sonnet-llama2_13b-gpt4o.json  claude35_sonnet-llama2_13b-llama2_7b.json  claude35_sonnet-llama2_13b-llama3_8b.json  claude35_sonnet-llama2_7b-gpt35_turbo.json  claude35_sonnet-llama2_7b-gpt4o.json  claude35_sonnet-llama2_7b-llama2_7b.json  claude35_sonnet-llama2_7b-llama3_8b.json  claude35_sonnet-llama3_8b-gpt35_turbo.json  claude35_sonnet-llama3_8b-gpt4o.json  claude35_sonnet-llama3_8b-llama2_7b.json  claude35_sonnet-llama3_8b-llama3_8b.json  claude3_sonnet-gpt35_turbo-gpt35_turbo.json  claude3_sonnet-gpt35_turbo-gpt4o.json  claude3_sonnet-gpt35_turbo-llama2_7b.json  claude3_sonnet-gpt35_turbo-llama3_8b.json  claude3_sonnet-gpt4o-gpt35_turbo.json  claude3_sonnet-gpt4o-gpt4o.json  claude3_sonnet-gpt4o-llama2_7b.json  claude3_sonnet-gpt4o-llama3_8b.json  claude3_sonnet-llama2_13b-gpt35_turbo.json  claude3_sonnet-llama2_13b-gpt4o.json  claude3_sonnet-llama2_13b-llama2_7b.json  claude3_sonnet-llama2_13b-llama3_8b.json  claude3_sonnet-llama2_7b-gpt35_turbo.json  claude3_sonnet-llama2_7b-gpt4o.json  claude3_sonnet-llama2_7b-llama2_7b.json  (+49 more)
scripts/: check_quality_source_length.py
solib/: __init__.py  (+9 more)
(+26681 files in other folders)
