[tool.poetry]
name = "solib"
version = "0.1.0"
description = "Library of scalable oversight techniques to make experimentation (and life) easier"
authors = ["abhimanyu <abhimanyupallavisudhir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = ">=0.33.0"
aiofiles = ">=24.1.0"
annotated-types = ">=0.7.0"
anthropic = ">=0.31.2"
anyio = ">=4.4.0"
appnope = ">=0.1.4"
asttokens = ">=2.4.1"
certifi = ">=2024.6.2"
charset-normalizer = ">=3.3.2"
colorama = ">=0.4.6"
comm = ">=0.2.2"
contourpy = ">=1.2.1"
costly = ">=2.2.1"
cycler = ">=0.12.1"
debugpy = ">=1.8.2"
decorator = ">=5.1.1"
distro = ">=1.9.0"
exceptiongroup = ">=1.2.2"
executing = ">=2.0.1"
filelock = ">=3.15.4"
fonttools = ">=4.53.1"
fsspec = ">=2024.6.1"
h11 = ">=0.14.0"
httpcore = ">=1.0.5"
httpx = ">=0.27.0"
huggingface-hub = ">=0.23.4"
idna = ">=3.7"
ipykernel = ">=6.29.5"
ipython = ">=8.26.0"
jedi = ">=0.19.1"
Jinja2 = ">=3.1.4"
jiter = ">=0.5.0"
jupyter_client = ">=8.6.2"
jupyter_core = ">=5.7.2"
kiwisolver = ">=1.4.5"
MarkupSafe = ">=2.1.5"
matplotlib = ">=3.9.1"
matplotlib-inline = ">=0.1.7"
mistralai = ">=0.0.12"
mpmath = ">=1.3.0"
nest-asyncio = ">=1.6.0"
networkx = ">=3.3"
numpy = ">=1.26.4"
nvidia-cublas-cu12 = ">=12.1.3.1"
nvidia-cuda-cupti-cu12 = ">=12.1.105"
nvidia-cuda-nvrtc-cu12 = ">=12.1.105"
nvidia-cuda-runtime-cu12 = ">=12.1.105"
nvidia-cudnn-cu12 = ">=8.9.2.26"
nvidia-cufft-cu12 = ">=11.0.2.54"
nvidia-curand-cu12 = ">=10.3.2.106"
nvidia-cusolver-cu12 = ">=11.4.5.107"
nvidia-cusparse-cu12 = ">=12.1.0.106"
nvidia-nccl-cu12 = ">=2.20.5"
nvidia-nvjitlink-cu12 = ">=12.5.82"
nvidia-nvtx-cu12 = ">=12.1.105"
openai = ">=1.37.0"
packaging = ">=24.1"
parso = ">=0.8.4"
perscache = ">=0.6.1"
pexpect = ">=4.9.0"
pillow = ">=10.4.0"
platformdirs = ">=4.2.2"
prompt_toolkit = ">=3.0.47"
psutil = ">=6.0.0"
ptyprocess = ">=0.7.0"
pure_eval = ">=0.2.3"
pydantic = ">=2.8.2"
pydantic_core = ">=2.20.1"
Pygments = ">=2.18.0"
pyparsing = ">=3.1.2"
python-dateutil = ">=2.9.0.post0"
python-dotenv = ">=1.0.1"
PyYAML = ">=6.0.1"
pyzmq = ">=26.0.3"
regex = ">=2024.5.15"
requests = ">=2.32.3"
safetensors = ">=0.4.3"
six = ">=1.16.0"
sniffio = ">=1.3.1"
stack-data = ">=0.6.3"
sympy = ">=1.13.1"
tabulate = ">=0.9.0"
tokenizers = ">=0.19.1"
torch = ">=2.3.1"
tornado = ">=6.4.1"
tqdm = ">=4.66.4"
traitlets = ">=5.14.3"
transformers = ">=4.42.3"
triton = ">=2.3.1"
typing_extensions = ">=4.12.2"
urllib3 = ">=2.2.2"
wcwidth = ">=0.2.13"
langchain = "^0.3.0"
bitsandbytes = "^0.44.0"
sentencepiece = "^0.2.0"
protobuf = "^5.28.2"
langchain-openai = "^0.2.0"
langchain-mistralai = "^0.2.0"
langchain-anthropic = "^0.2.1"
datasets = "^3.0.2"
tenacity = "^9.0.0"

[tool.pytest.ini_options]
addopts="-p no:logging"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
