[project]
name = "solib"
version = "0.1.0"
description = "Library of scalable oversight techniques to make experimentation (and life) easier"
authors = [{ name = "abhimanyu", email = "abhimanyupallavisudhir@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "litellm>=1.59.8",
    "asttokens>=2.4.1",
    "costly>=2.3.3",
    "numpy>=1.26.4",
    "torch>=2.3.1",
    "tqdm>=4.66.4",
    "typing_extensions>=4.12.2",
    "datasets>=3.0.2,<4",
    "tenacity>=9.0.0,<10",
    "aiofiles>=24.1.0",
]

[dependency-groups]
dev = ["pytest>=8.3.2,<9"]


[tool.pytest.ini_options]
addopts="-p no:logging"
