[project]
name = "solib"
version = "0.1.0"
description = "Library of scalable oversight techniques to make experimentation (and life) easier"
authors = [{ name = "abhimanyu", email = "abhimanyupallavisudhir@gmail.com" }, {name = "JacksonKaunismaa", email = "jackkaunis@protonmail.com"}]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "litellm>=1.59.8",
    "asttokens>=2.4.1",
    "costly>=2.3.5",
    "numpy>=1.26.4",
    "torch>=2.3.1",
    "tqdm>=4.66.4",
    "typing_extensions>=4.12.2",
    "datasets>=3.0.2,<4",
    "tenacity>=9.0.0,<10",
    "aiofiles>=24.1.0",
    "numpydoc>=1.8.0",
    "icontract>=2.7.1",
    "diskcache>=5.6.3",
    "transformers>=4.48.2",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.45.1",
    "aiolimiter>=1.2.1",
    "plotnine>=0.14.5",
    "pandas>=2.2.3",
    "adjusttext>=1.3.0",
    "flask>=3.1.2",
    "google>=3.0.0",
]

[dependency-groups]
dev = ["pytest>=8.3.2,<9"]

[tool.setuptools]
packages = ["solib"]

[tool.pytest.ini_options]
addopts="-p no:logging"
